feat: update existing tests